# dark-matter-sim

./: .gitignore  GetTimeStep.lib  README.md  compile.txt  config.json  errors.txt  fft.go  go.mod  loadConfig.go  setup.go
PhysicsEngine/: Cargo.toml  loadConfig.rs
cuda/: AtomicTest.cu  BarnesHut.cu  Forces.cu  GetTimeStep.cu  OtherForces.cu
headers/: BarnesHut.h  GetTimeStep.h
libs/: Forces.exp  Forces.lib
physics-engine/: CMakeLists.txt  Cargo.toml
physics-engine/cuda/: BarnesHut.cu  barnes_hut.cu
physics-engine/src/: barnes_hut.rs  config.rs  conversions.rs  main.rs  setup.rs  zeldovich.cu  zeldovich.ptx  zeldovich.rs
src/: barnesHut.go  forces.go  getTimeStep.go  loadConfig.go  main.go  setup.go
testing/: PLACEHOLDER
wrappers/: BarnesHutWrapper.cpp  TimeStepWrapper.cpp
